--- a/src/sections/style.css
+++ b/src/sections/style.css
@@ -67,13 +67,13 @@ ur {
 
 
 nav {
-    height: 50px;
-    width: 100%;
+    height: 0.5rem;
+    
     background-color: white;
     position: absolute;
     z-index: 50;
     display: flex;
-    align-items: center;
+    align-items: right;
 }
 
 main {
