--- a/src/sections/style.css
+++ b/src/sections/style.css
@@ -8,9 +8,9 @@
 }
 .menu {
     position: fixed;
-    width: 100vw;
+    width: 500vw;
     height: 100vh;
-    top: 60px;
+    top: 0px;
     left: 0;
     z-index: 100;
     transform: translateX(-100%);
@@ -33,16 +33,16 @@
     background-color: white;
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
 }
 
 .menu__header {
     font-size: 2rem;
     color: #1200ba;
-    border-bottom: 1px solid #1200ba;
     width: 100%;
     text-align: center;
     margin-bottom: 10px;
+    z-index: 2000;
 
 }
 
@@ -51,24 +51,27 @@ ur li a {
     color: #1200ba;
     text-decoration: none;
     font-size: 1rem;
+    width: 100%;
 
 
 }
 
 ur li {
     display: flex;
-    margin: 10px 0px;
+    margin: 8px 0px;
+    width: 300px;
 }
 
 ur {
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
 }
 
 
 nav {
     height: 0.5rem;
-    
+    width: 100%;
     background-color: white;
     position: absolute;
     z-index: 50;
