--- a/src/sections/style.css
+++ b/src/sections/style.css
@@ -5,10 +5,11 @@
 }
 #root{
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 .menu {
     position: fixed;
-    width: 500vw;
+    width: 100vw;
     height: 100vh;
     top: 0px;
     left: 0;
@@ -76,7 +77,7 @@ nav {
     position: absolute;
     z-index: 50;
     display: flex;
-    align-items: right;
+    align-items: center;
 }
 
 main {
