--- a/src/sections/style.css
+++ b/src/sections/style.css
@@ -88,6 +88,7 @@ main {
     width: 30px;
     height: 20px;
     margin-left: 20px;
+    margin-top: 32px;
     position: relative;
     cursor: pointer;
 }
